--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,8 @@
-aistudio-sdk==0.3.8
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.11.0
-astor==0.8.1
-bce-python-sdk==0.9.59
-cachetools==6.2.4
-certifi==2025.1.31
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.3.1
-coloredlogs==15.0.1
-colorlog==6.10.1
-cssselect==1.3.0
-cssutils==2.11.1
-decorator==5.2.1
-einops==0.8.1
-et_xmlfile==2.0.0
 fastapi==0.128.0
-filelock==3.17.0
-fire==0.7.0
-flatbuffers==25.2.10
-fsspec==2025.2.0
-ftfy==6.3.1
-fugashi==1.4.0
-future==1.0.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.29.1
-humanfriendly==10.0
-idna==3.10
-imagesize==1.4.1
-jaconv==0.4.0
-Jinja2==3.1.5
-joblib==1.5.3
-json5==0.12.0
-loguru==0.7.3
-lxml==6.0.2
-MarkupSafe==3.0.2
-ml_dtypes==0.5.1
-modelscope==1.33.0
-more-itertools==10.8.0
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.3
-onnx==1.17.0
-onnxruntime==1.20.1
-onnxscript==0.2.1
-opencv-contrib-python==4.10.0.84
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-opt-einsum==3.3.0
-packaging==24.2
-pandas==2.3.3
-pillow==11.1.0
-premailer==3.10.0
-prettytable==3.17.0
-protobuf==5.29.3
-psutil==7.2.1
-py-cpuinfo==9.0.0
-pyclipper==1.4.0
-pycryptodome==3.23.0
+huggingface_hub==0.29.1
+numpy==2.4.1
+opencv_contrib_python==4.10.0.84
+opencv_python==4.11.0.86
 pydantic==2.12.5
-pydantic_core==2.41.5
-pypdfium2==5.3.0
-python-bidi==0.6.7
-python-dateutil==2.9.0.post0
-python-multipart==0.0.21
-pytz==2025.2
-PyYAML==6.0.2
-rapidocr-onnxruntime==1.2.3
-regex==2024.11.6
-requests==2.32.3
-ruamel.yaml==0.19.1
-safetensors==0.7.0
-scikit-learn==1.8.0
-scipy==1.16.3
-sentencepiece==0.2.1
-setuptools==75.8.2
-shapely==2.1.2
-six==1.17.0
-sniffio==1.3.1
-starlette==0.50.0
-sympy==1.13.1
-termcolor==2.5.0
-threadpoolctl==3.6.0
-tiktoken==0.12.0
-tokenizers==0.21.0
-torch==2.6.0
-torchvision==0.21.0
-tqdm==4.67.1
-transformers==4.49.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-ujson==5.11.0
-unidic-lite==1.0.8
-urllib3==2.3.0
+rapidocr_onnxruntime==1.2.3
 uvicorn==0.40.0
-wcwidth==0.2.14
