--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.128.0
 huggingface_hub==0.29.1
+manga_ocr==0.1.14
 numpy==2.4.1
 opencv_contrib_python==4.10.0.84
 opencv_python==4.11.0.86
+Pillow==12.1.0
 pydantic==2.12.5
 rapidocr_onnxruntime==1.2.3
 uvicorn==0.40.0
